--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  color: #fff;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -65,6 +66,7 @@ button:focus-visible {
     color: #747bff;
   }
   button {
+    color: #242424;
     background-color: #f9f9f9;
   }
 }
